--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- NAVIGATION SECTION -->
     <section id="header">
         <nav class="navbar navbar-expand-lg fixed-top">
-            <div class="container" >
+            <div class="container">
                 <a class="navbar-brand" href="#">
                     <img decoding="async" src="./images/logo-footer.png" class="img-fluid">
                 </a>
@@ -422,7 +422,8 @@
 
     <section id="footer">
         <div class="container text-center ">
-            <h6 class="h-75">© Copyright Glint 2017 <span>Site Template by Colorlib</span></h6>
+            <h6 class="h-75">© Copyright Glint 2023 <span>Site Template by Colorlib</span></h6>
+            <p>Made by uttam vaghmashi</p>
         </div>
     </section>
 
