--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="./main.js">
-    <title>Document</title>
+    <link rel="stylesheet" href="./images/">
+    <title>Glint</title>
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
